there we go (overflow hidden was the trick).  Now, the only real issue is the maxheight seems way too high initially, wtf

--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-.collapsor { border: 1px solid green; background: cornflowerblue; }
+.collapsor { overflow: hidden; }
 
 #wait {
     background: white url(img/loading.indicator.bee.gif) no-repeat;
